test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/compound_assign_ternary.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CMultiply: 
                    CVar: 
                      TIdentifier: a
                      None: 
                    CConditional: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 3
                        None: 
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
