test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/duplicate_labels.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CLabel: 
                TIdentifier: label
                CExpression: 
                  CAssignment: 
                    None: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
            CS: 
              CLabel: 
                TIdentifier: label
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
